syntax = "proto3";
package controlData;

message ChassisInfo
{
    float speed=1;
    float steeringAngle=2;
    int32 mode=3;
}